update titles and descriptions

--- a/free/jinja2/downloads.html
+++ b/free/jinja2/downloads.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
   {% block description %}
-  <meta name="description" content="">
+  <meta name="description" content="OsmAnd Map file downloads">
   {% endblock %}
   {% block title %}
   <title>Downloads</title>
