--- a/free/jinja2/contact.html
+++ b/free/jinja2/contact.html
@@ -3,7 +3,7 @@
   <meta name="description" content="OpenSuperMaps Contact Info">
   {% endblock %}
   {% block title %}
-  <title>OpenSuperMaps Contact</title>
+  <title>Contact</title>
   {% endblock %}
   {% block css %}
   <link href="{{static}}/css/starter-template.css" rel="stylesheet">
