--- a/free/jinja2/faq.html
+++ b/free/jinja2/faq.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
   {% block description %}
-  <meta name="description" content="OpenSuperMaps Contact Info">
+  <meta name="description" content="OpenSuperMaps FAQ">
   {% endblock %}
   {% block title %}
-  <title>OpenSuperMaps Contact</title>
+  <title>FAQ</title>
   {% endblock %}
   {% block css %}
   <link href="{{static}}/css/starter-template.css" rel="stylesheet">
