add file status, remove duplicate paddings

--- a/free/jinja2/downloads.html
+++ b/free/jinja2/downloads.html
@@ -14,7 +14,6 @@
    {% block search %}
    {% endblock %}
    {% block content %}
-   <div class="container">
      <div class="starter-template">
      <h2>OSMAnd Map files supercharged with open address data</h2>
      <div class="row">
@@ -25,12 +24,13 @@
              <table class="table">
                <tr>
                  <td>File Name</td>
+                 <td>Status</td>
                  <td>Last Modified</td>
                  <td>Size (MB)</td>
                </tr>
                {% for file in files_obf %}
                <tr>
-                   <td><a href="{{static}}/downloads/{{file[0]}}">{{file[1]}}</a></td><td>{{file[2]}}</td><td>{{file[3]}}</td>
+                   <td><a href="{{static}}/downloads/{{file[0]}}">{{file[1]}}</a></td><td>{{file[2]}}</td><td>{{file[3]}}</td><td>{{file[4]}}</td>
                </tr>
                {% endfor %}
              </table>
@@ -44,7 +44,6 @@
      </div>
      </div>
      </div>
-    </div>
    {% endblock %}
    {% block cover_classes_close %}
    {% endblock %}
