--- a/free/jinja2/base.html
+++ b/free/jinja2/base.html
@@ -11,21 +11,12 @@
    <link rel="icon" href="{{static}}/images/favicon.ico">
    {% block title %}{% endblock %}
    <!-- Bootstrap core CSS -->
-   <link href="{{static}}/css/bootstrap.min.css" rel="stylesheet">
-
-   <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-   <!--<link href="{{static}}/css/ie10-viewport-bug-workaround.css" rel="stylesheet"> -->
+   <!--<link href="{{static}}/css/bootstrap.min.css" rel="stylesheet">-->
 
    <!-- Custom styles for this template -->
    {% block css %}
 
    {% endblock %}
-
-   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-   <!--[if lt IE 9]>
-     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-   <![endif]-->
 
  </head>
 
@@ -33,32 +24,17 @@
    {% block cover_classes %}
     {% endblock %}
     {% block nav %}
-           <nav class="navbar navbar-inverse navbar-fixed-top">
-           <div class="container">
-               <div class="nav navbar-header">
-                   <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                   <span class="sr-only">Toggle navigation</span>
-                   <span class="icon-bar"></span>
-                   <span class="icon-bar"></span>
-                   <span class="icon-bar"></span>
-                   </button>
-                   <a class="navbar-brand" href="/">OpenSuperMaps</a>
-               </div>
-               <div id="navbar" class="collapse navbar-collapse">
-                 <ul class="nav  navbar-nav">
-                   <!--<li><a href="/login">Login</a></li>
-                   <li><a href="/logout">Logout</a></li>
-                   <li><a href="/register">Register</a></li>--!>
-                   <li><a href="/faq">FAQ</a></li>
-                   <li><a href="/contact">Contact</a></li> 
-                 </ul>
-               </div><!--/.nav-collapse -->
-           </div>
+           <nav class="menu">
+               <div class="contain">
+                   <a id="brand" href="/">OpenSuperMaps</a>
+                   <a href="/faq">FAQ</a>
+                   <a href="/contact">Contact</a>
+                </div>
            </nav>
     {% endblock %}
     {% block photo %}
     {% endblock %}
-    <div class="container">
+    <div class="wrapper">
    {% block search %}
    {% endblock %}
    {% block contact %}
@@ -79,10 +55,8 @@
  <!-- Bootstrap core JavaScript
  ================================================== -->
  <!-- Placed at the end of the document so the pages load faster -->
- <script src="{{static}}/js/bootstrap-native.min.js"></script>
+ <!-- <script src="{{static}}/js/bootstrap-native.min.js"></script>-->
  {% block js %}
  {% endblock %}
- <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
- <!-- <script src="{{static}}/js/ie10-viewport-bug-workaround.js"></script> -->
 </body>
 </html>
