--- a/free/jinja2/contact.html
+++ b/free/jinja2/contact.html
@@ -9,43 +9,23 @@
   <link href="{{static}}/css/starter-template.css" rel="stylesheet">
   {% endblock %}
   {% block cover_classes %}
-  {#<div class="site-wrapper">
-
-    <div class="site-wrapper-inner">#}
    {% endblock %}
    {% block photo %}
-   <div class="row">
-     <div class="col-xs-12">
-       <picture>
-         <source srcset="{{static}}/images/hurricane_ridge.jpg" media="(min-width: 700px)">
-         <source srcset="{{static}}/images/hurricane_ridge_cropped.jpg">
-         <img class="img-responsive pic" src="hurricane_ridge.jpg">
-       </picture>
-     </div>
-   </div>
    {% endblock %}
    {% block search %}
-       <div class="row search">
-
    {% endblock %}
       {% block contact %}
-      <div id="contact" class="col-md-10">
+    <div class="content">
       <a href="mailto:patrick@patricknoll.com"><img class="iconize" src={{static}}/images/mail.svg></a>
       <a href="https://github.com/pnoll1"><img class="iconize" src="{{static}}/images/GitHub-Mark-120px-plus.png"></a>
-      </div>
-    </div>
       {% endblock %}
    {% block content %}
-     {#}<div class="inner cover">#}
-       <div class="starter-template">
-         <p>Send an email to patrick@patricknoll.com to contact me.</p>
-         <p> You can also click on the envelope icon if you have a mail client setup.</p>
+       <div class="row2">
+         <p>Github for issues, Email for other inquiries</p>
           </div>
-        {#</div>#}
+    </div>
       {% endblock %}
       {% block cover_classes_close %}
-{#    </div>
-</div>#}
   {% endblock %}
   {% block js %}
 
