add checksums, update downloads page

--- a/free/jinja2/base.html
+++ b/free/jinja2/base.html
@@ -23,11 +23,9 @@
  <body>
     {% block nav %}
            <nav class="menu">
-               <div class="contain">
                    <a id="brand" href="/">OpenSuperMaps</a>
-                   <a href="/faq">FAQ</a>
-                   <a href="/contact">Contact</a>
-                </div>
+                   <a class="contain" href="/faq">FAQ</a>
+                   <a class="contain" href="/contact">Contact</a>
            </nav>
     {% endblock %}
     <div class="wrapper">
