--- a/free/jinja2/downloads.html
+++ b/free/jinja2/downloads.html
@@ -12,16 +12,20 @@
    {% endblock %}
    {% block content %}
      <div class="content">
-     <h2>OSMAnd Map files supercharged with open address data</h2>
+         <h2>OSMAnd Map files supercharged with open address data</h2>
+         <div class="row"><img class="iconleft" src="{{static}}/images/go-home.svg"><div class="bold textleft">More Addresses</div></div>
+         <div class="row"><div class="bold textright">Easier To Search</div><img class="iconright" src="{{static}}/images/system-search.svg"></div>
+         <div class="row"><img class="iconleft" src="{{static}}/images/dialog-ok.svg"><div class="bold textleft">Updated Monthly</div></div>
                 <table class="table">
                 <tr>
                  <th>File Name</th>
                  <th>Last Modified</th>
                  <th>Size (MB)</th>
+                 <th>Checksum</th>
                 </tr>
                {% for file in files_obf %}
                <tr>
-                   <td><a href="{{static}}/downloads/{{file[0]}}">{{file[1]}}</a></td><td>{{file[2]}}</td><td>{{file[3]}}</td>
+                   <td><a href="{{file[0]}}">{{file[1]}}</a></td><td>{{file[2]}}</td><td>{{file[3]}}</td><td><a href="{{file[4]}}">{{file[5]}}</a></td>
                </tr>
                {% endfor %}
              </table>
